--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
         height: 500px;
         background: #F7F7F7;
         float: left;
-        display: inline-block;
+        display: block;
         margin: 10px;
     }
     .echarts2{
@@ -31,9 +31,10 @@
         height: 500px;
         background: #F7F7F7;
         float: left;
-        display: inline-block;
+        display: block;
         margin: 10px;
     }
+
 
 </style>
 <body>
