--- a/test.html
+++ b/test.html
@@ -18,6 +18,24 @@
     /*    float: left;*/
     /*    margin: 10px;*/
     /*}*/
+    .title1{
+        width: 1000px;
+        height: 28px;
+        line-height: 28px;
+        text-align: center;
+        color: #4ebbfe;
+        margin-top: 20px;
+    }
+    .title2{
+        width: 1000px;
+        height: 28px;
+        line-height: 28px;
+        font-size: 28px;
+        margin-left: 40px;
+        color: #888888;
+        margin-top: 10px;
+
+    }
     .echarts1{
         width: 1000px;
         height: 500px;
@@ -32,14 +50,28 @@
         background: #F7F7F7;
         float: left;
         display: block;
-        margin: 10px;
+        margin: 30px 10px 10px 10px;
+    }
+    .echarts3{
+        width: 1000px;
+        height: 500px;
+        background: #F7F7F7;
+        float: left;
+        display: block;
+        margin: 30px 10px 10px 10px;
     }
 
 
 </style>
 <body>
+<p class="title2">小助手实时监测您的健康</p>
+<p class="title1">血糖值  单位：mmol/L</p>
 <div class="echarts1"></div>
+<p class="title1">血压值  单位：mmHg</p>
 <div class="echarts2"></div>
+<p class="title1">行走步数  单位：万步</p>
+<div class="echarts3"></div>
+
 <script src="js/test.js"></script>
 </body>
 </html>
