--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>健康小助手</title>
     <script src="./js/echarts.min.js"></script>
 </head>
 <style>
@@ -61,6 +61,26 @@
         display: block;
         margin:60px 10px 10px 10px;
     }
+    .fenxi{
+        width: 100%;
+        height: 100px;
+        display: inline-block;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    .fenxi2{
+        text-align: center;
+        width: 100%;
+        height: 100px;
+        line-height: 100px;
+        background: #4ebbfe;
+        border: none;
+        font-size: 50px;
+        color: #F7F7F7;
+        margin-left: 20px;
+        border-radius: 20px;
+    }
+
 
 
 </style>
@@ -72,7 +92,9 @@
 <div class="echarts2"></div>
 <p class="title1">行走步数  单位：万步</p>
 <div class="echarts3"></div>
-
+<div class="fenxi">
+    <a href="./test2.html"><button class="fenxi2">数据分析</button></a>
+</div>
 <script src="js/test.js"></script>
 </body>
 </html>
