--- a/test.html
+++ b/test.html
@@ -67,6 +67,7 @@
         display: inline-block;
         margin-top: 50px;
         margin-bottom: 50px;
+        margin-left: 20px;
     }
     .fenxi2{
         text-align: center;
